--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                         <input class="form__input" type="text" name="name" pattern="^([А-ЯЁ]{1})[а-яё]{1,}(\-)?([А-ЯЁ]{1}[а-яё]{1,})?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="[a-z0-9-_].*@.*\..*" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="\s\w+\@\w+\.[a-z]+" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
-                    </div> <!--\w+\@\w+\.[a-z]+--> 
+                    </div> <!--\w+\@\w+\.[a-z]+         [a-z0-9-_].*@.*\..*--> 
                     <div class="form__field">
                         <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(?:\+|\d)[\d\-\(\) ]{9,}\d" minlength="18" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
