--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div> <!--\w+\@\w+\.[a-z]+         [a-z0-9-_].*@.*\..*--> 
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(?:\+|\d)[\d\-\(\) ]{9,}\d" minlength="18" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}" minlength="18" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
