--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="^([А-ЯЁ]{1})[а-яё]{1,}(\-)?([А-ЯЁ]{1}[а-яё]{1,})?" placeholder="Имя" required minlength="2" maxlength="20"/>
+                        <input class="form__input" type="text" name="name" pattern="([А-ЯЁ]{1})[а-яё]{1,}(\-)?([А-ЯЁ]{1}[а-яё]{1,})?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="\s\w+\@\w+\.[a-z]+" placeholder="E-Mail" required />
@@ -34,7 +34,7 @@
                         <input class="form__input" type="url" name="url" pattern="[-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
-                    <button class="form__button" type="submit">Отправить</button>
+                    <button class="form__button" type="submit">Отправить</button>   
                 </fieldset>
             </form>
         </div>
