--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="\s\w+\@\w+\.[a-z]+" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
-                    </div> <!--\w+\@\w+\.[a-z]+         [a-z0-9-_].*@.*\..*--> 
+                    </div> <!--\w+\@\w+\.[a-z]+         [a-z0-9-_].*@.*\..*      [-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?--> 
                     <div class="form__field">
                         <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}" minlength="18" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="[-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="(http:[\/][\/]|https:[\/][\/])(((\d{1,3}[\.]){3}\d{1,3}([:]\d{1,5})?)[\/]?|(w{3}[\.])?\w+([\.]\w+)?([^www][\.][a-zA-Z]{2,5})([\/]\w+)*(#)?)" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>   
