--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="(http:[\/][\/]|https:[\/][\/])(((\d{1,3}[\.]){3}\d{1,3}([:]\d{1,5})?)[\/]?|(w{3}[\.])?\w+([\.]\w+)?([^www][\.][a-zA-Z]{2,5})([\/]\w+)*(#)?)" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="(http://|https://)(w{3}\.)?(((\d{3}\.){3}\d{3})|\w+\.(ru|com))(:\d{2,5})?(/\w+)+#?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>   
