--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="([А-ЯЁ]{1})[а-яё]{1,}(\-)?([А-ЯЁ]{1}[а-яё]{1,})?" placeholder="Имя" required minlength="2" maxlength="20"/>
+                        <input class="form__input" type="text" name="name" pattern="[А-Я]+\W*?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="\s\w+\@\w+\.[a-z]+" placeholder="E-Mail" required />
