--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div> <!--\w+\@\w+\.[a-z]+         [a-z0-9-_].*@.*\..*      [-a-zA-Z0-9@:%_\+.~#?&//=]{2,256}\.[a-z]{2,4}\b(\/[-a-zA-Z0-9@:%_\+.~#?&//=]*)?--> 
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="([/+]?\d([\(]\s?\d{3}[\)]|\s?\d{3})\s?[\-]?\d{3}[\-]?\d{2}[\-]?\d{2})" minlength="18" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+\d|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}" minlength="18" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
-                    </div>
+                    </div> <!--(\+\d|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}   ([/+]?\d([\(]\s?\d{3}[\)]|\s?\d{3})\s?[\-]?\d{3}[\-]?\d{2}[\-]?\d{2})  -->
                     <div class="form__field">
                         <input class="form__input" type="url" name="url" pattern="" placeholder="Ваш сайт" required/>
                        <!--(http://|https://)(w{3}\.)?(((\d{3}\.){3}\d{3})|\w+\.(ru|com))(:\d{2,5})?(/\w+)+#?--> 
