--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="form__field">
                         <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+\d|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}" minlength="18" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
-                    </div> <!--(\+\d|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}   ([/+]?\d([\(]\s?\d{3}[\)]|\s?\d{3})\s?[\-]?\d{3}[\-]?\d{2}[\-]?\d{2})  -->
+                    </div> <!--  -->
                     <div class="form__field">
                         <input class="form__input" type="url" name="url" pattern="" placeholder="Ваш сайт" required/>
                        <!--(http://|https://)(w{3}\.)?(((\d{3}\.){3}\d{3})|\w+\.(ru|com))(:\d{2,5})?(/\w+)+#?--> 
