--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="[А-Я]+\W*" placeholder="Имя" required minlength="2" maxlength="20"/>
+                       <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ]{1}[а-яё]+(-([А-ЯЁ]{1}[а-яё]+))?$" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="email" name="email" pattern="\w+[\@\w+\.[a-z]+\s" placeholder="E-Mail" required />
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div> <!--  -->
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="^(http://|https://)(www\.)?([A-Za-z0-9\-._])*\.{1}[A-Za-z]{2,3}((\/:[\d]{2,5})?(\/([\wW\-\/#])*)?)" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="^https?:\/\/([w]{3}\.)?(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}(:\d{2,5})?|(w{3}\.)?[-a-zA-Z0-9]+\.[a-zA-Z]{2,}(\.[a-zA-Z]{2,})?|(\/[a-zA-Z]+)*)$" placeholder="Ваш сайт" required/>
                        <!----> 
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
