--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="form__field">
                         <input class="form__input" type="url" name="url" pattern="(https?:\/{2}(www\.)?)((([a-z-_0-9]{1,}\.)?[a-z-_0-9]{2,}\.[a-z]{2,})|(\d{2,3}\.\d{2,3}\.\d{2,3}\.\d{2,3}))(:[1-9]\d{1,4})?(\/?[!#%=&(*)%a-z-_A-Z0-9\.]+\/?)*?" placeholder="Ваш сайт" required/>
                        <!----> 
-                        <span class="form__error">URL в формате: http://mysite.ru</span>ы
+                        <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="submit">Отправить</button>   
                 </fieldset>
