--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ]{1}[а-яё]+(-([А-ЯЁ]{1}[а-яё]+))?$" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="\b[a-z][a-z0-9._-]*@[a-z][a-z0-9_-]+\.[a-z]+(?:\.[a-z]+)?\b" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="\b[a-z][a-z0-9._-]*@[a-z][a-z0-9_-]+\.{1}+[a-z]+(?:\.[a-z]+)?\b" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div> <!----> 
                     <div class="form__field">
-                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+\d|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}" minlength="11" maxlength="18"  required/>
+                        <input class="form__input" type="tel" name="tel" placeholder="Телефон" pattern="(\+7|\d)\s?\(?\d{3}\)?\s?-?\d{3}-?\d{2}-?\d{2}" minlength="11" maxlength="18"  required/>
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div> <!--  -->
                     <div class="form__field">
