--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                        <input class="form__input" type="text" name="name" pattern="^[А-ЯЁ]{1}[а-яё]+(-([А-ЯЁ]{1}[а-яё]+))?$" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="email" name="email" pattern="\b[a-z][a-z0-9._-]*@[a-z][a-z0-9_-]+\.{1}+[a-z]+(?:\.[a-z]+)?\b" placeholder="E-Mail" required />
+                        <input class="form__input" type="email" name="email" pattern="\b^[a-z0-9_]+([-\.][a-z0-9_-]+)*@[a-z]+(?:\.[a-z]+)?\b" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div> <!----> 
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">телефон в формате: +7 (900) 000-00-00</span>
                     </div> <!--  -->
                     <div class="form__field">
-                        <input class="form__input" type="url" name="url" pattern="(http[s]?:\/{2}([\w\.])?)((([a-z-_0-9]{1,}\.)?[a-z-_0-9]{6}\.[a-z]{2,})|(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}))(:[1-9]\d{1,4})?(\/?[!#%=&(*)%a-z-_A-Z0-9\.?]+\/?)*" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="url" name="url" pattern="(http:|https:)(\/\/)?((((?!www\.www\.)[a-z]+[\^W-w]+[.a-z])+([.a-z]{2,}))|((25[0-5]|2[0-4]\d|[01]?\d\d?)\.){1,}(25[0-5]|2[0-4]\d|[01]?\d\d?))([:](6553[0-5]|655[0-2][0-9]|65[0-4][0-9]{2}|6[0-4][0-9]{3}|[1-5][0-9]{4}|[1-9][0-9]{0,3}))?([\/][!#%=&(*)%a-z-_0-9\.]+)*" placeholder="Ваш сайт" required/>
                        <!----> 
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
